--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta name="google-site-verification" content="dWL0sauiVZALtW_hAkAkbE1bFt86-fex9TwoxTA3_2I" />
     
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-R5M6SPY6CV"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7YE2NNQZJ1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-R5M6SPY6CV');
+  gtag('config', 'G-7YE2NNQZJ1');
 </script>
+    
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Aqua Tower™ - Advanced Water Purification System</title>
