--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     
-    <meta name="google-site-verification" content="dWL0sauiVZALtW_hAkAkbE1bFt86-fex9TwoxTA3_2I" />
+<!--     <meta name="google-site-verification" content="dWL0sauiVZALtW_hAkAkbE1bFt86-fex9TwoxTA3_2I" /> -->
     
     <!-- Google tag (gtag.js) -->
 
