--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 <!--     <meta name="google-site-verification" content="dWL0sauiVZALtW_hAkAkbE1bFt86-fex9TwoxTA3_2I" /> -->
     
     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-94JG2NE88Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-94JG2NE88Z');
+</script>
 
     
     <meta charset="utf-8" />
