--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   gtag('config', 'G-94JG2NE88Z');
 </script>
 
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="https://aqua-tower.glitch.me/sitemap.xml">
+
+
     
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
