--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Aqua Tower™ - Advanced Water Purification System</title>
-    <link rel="canonical" href="https://aqua-tower.glitch.me" />
+    <link rel="canonical" href="https://healthcareunitedstates.github.io/Aqua-Tower/" />
 
     <meta name="description" content="Aqua Tower™ is a cutting-edge water purification technology designed to deliver clean and healthy water, free from contaminants like bacteria, chlorine, and heavy metals."/>
     <meta name="keywords" content="Aqua Tower, water purification, clean water, reverse osmosis, water filter, healthy water, hydration, bacteria-free water, home water system"/>
